--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-811.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-589.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.94MB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
   - {name: 🇨🇳 台湾-1.60MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-675.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-6.67MB/s(Youtube:不良林), server: 29d78fe.pi.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.pi.gladns.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-811.3KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-385.9KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-1.22MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
   - {name: 🇭🇰 香港-4.58MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
@@ -74,11 +74,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
@@ -89,11 +89,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
@@ -105,11 +105,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
@@ -130,11 +130,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-589.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.94MB/s(Youtube:不良林)
       - 🇨🇳 台湾-1.60MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-675.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-6.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-811.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-385.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.22MB/s(Youtube:不良林)
       - 🇭🇰 香港-4.58MB/s(Youtube:不良林)
