--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-770.0KB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-3.52MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-577.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇳 中国-488.1KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
-  - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: jp02.henet.cyou, port: 20000, type: vmess, uuid: 279e0915-b0ce-49c7-a4df-39f9232d2034, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /live, ws-headers: {Host: jp02.henet.cyou}}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 198.144.183.193, port: 36113, type: vmess, uuid: 6643747e-d583-4ee2-9cc5-14abd51f43d7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 198.144.183.193}}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2, server: 159.223.54.93, port: 80, type: vmess, uuid: d97ee737-7bc0-4dca-acf1-85135ed4d97e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.223.54.93}}
+  - {name: 🇨🇳 中国-770.0KB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.30MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 台湾-4.32MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.76MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-873.4KB/s(Youtube:不良林), server: 165.154.253.49, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.49MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-3.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-577.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-488.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
