--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
-  - {name: 🇨🇳 中国-770.0KB/s(Youtube:不良林), server: 29d78fe.nf.gladns.com, port: 3389, type: trojan, password: 8c72bafbd4837610, sni: 29d78fe.nf.gladns.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.21MB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-451.0KB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.51MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.30MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 台湾-4.32MB/s(Youtube:不良林), server: 60.249.3.231, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.76MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-873.4KB/s(Youtube:不良林), server: 165.154.253.49, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
   - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.07MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.49MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-416.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.02MB/s(Youtube:不良林), server: 116.129.254.65, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-770.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.30MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-4.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-873.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-416.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
